# play-app

./: .dockerignore  Dockerfile  PLAN.md  codemap.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: docker-build.yml
.slim/: cartography.json
core/: auth.py  checkers_game.py  chess_game.py  codemap.md  config.py  connectfour_game.py  db.py  db_init.py  game_manager.py  hangman_game.py  rps_game.py  simon_game.py  snake_game.py  tictactoe_game.py  wordsearch_game.py
docs/: app-spec.md
services/: brain_sync.py  codemap.md  platform_scraper.py  webhid_controller.py
tests/: codemap.md  test_chess_game.py  test_connectfour_game.py  test_platform_scraper.py  test_rps_game.py  test_tictactoe_game.py
web/: codemap.md  socket_events.py
web/middleware/: auth.py  codemap.md
web/routes/: auth.py  codemap.md  games.py  players.py  tasks.py
web/static/: game-client.js  theme.css
web/templates/: app.html  base.html  dashboard.html  leaderboard.html  login.html  task_hub.html
web/templates/errors/: 404.html  500.html
web/templates/game/: checkers.html  chess.html  connectfour.html  hangman.html  rockpaperscissors.html  simonsays.html  snake.html  tictactoe.html  wordsearch.html
web/templates/macros/: _shell.html
wheels/: silrod_core-0.2.1-py3-none-any.whl
