[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "play-app"
version = "0.1.0"
description = "Family game hub — chess, tic-tac-toe, and more"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-socketio>=5.11.0",
    "python-chess>=1.9.0",
    "sqlalchemy>=2.0",
    "asyncpg>=0.30",
    "psycopg2-binary>=2.9",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "bcrypt>=4.0",
    "jinja2>=3.1",
    "python-multipart>=0.0.22",
]

[project.optional-dependencies]
dev = ["pytest>=9.0", "pytest-asyncio>=0.23", "ruff>=0.9"]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "web*"]